horse objects made and named

--- a/bet-the-ponies.html
+++ b/bet-the-ponies.html
@@ -11,7 +11,7 @@
 <main class="track">
     <div class="sky"></div>
     <div class="lane-1"><div class="test-horse" id="test-horse"></div></div>
-    <div class="lane-2"></div>
+    <div class="lane-2"><div class="test-horse" id="test-horse-two"></div></div>
     <div class="lane-3"></div>
     <div class="lane-4"></div>
     <div class="lane-5"></div>
@@ -21,7 +21,7 @@
 
 <script src="https://code.jquery.com/jquery-2.2.4.js"
         integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
-        crossorigin="anonymous"></script>>
+        crossorigin="anonymous"></script>
 <script src="bet-the-ponies.js"></script>
 </body>
 </html>
