added lists for horse info

--- a/bet-the-ponies.html
+++ b/bet-the-ponies.html
@@ -9,7 +9,40 @@
 
 <header class="top-bit"><button class="start" id="start">Start</button></header>
 <main class="track">
-    <div class="sky"></div>
+    <div class="sky">
+        <ul>
+            <li>Lane 1</li>
+            <li>Lane 2</li>
+            <li>Lane 3</li>
+            <li>Lane 4</li>
+            <li>Lane 5</li>
+            <li>Lane 6</li>
+        </ul>
+        <ul>
+            <li>Horse 1</li>
+            <li>Horse 2</li>
+            <li>Horse 3</li>
+            <li>Horse 4</li>
+            <li>Horse 5</li>
+            <li>Horse 6</li>
+        </ul>
+        <ul>
+            <li>Odds 1</li>
+            <li>Odds 2</li>
+            <li>Odds 3</li>
+            <li>Odds 4</li>
+            <li>Odds 5</li>
+            <li>Odds 6</li>
+        </ul>
+        <ul>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+            <li><input type="text"></li>
+        </ul>
+    </div>
     <div class="lane-1"><div class="test-horse" id="test-horse"></div></div>
     <div class="lane-2"><div class="test-horse" id="test-horse-two"></div></div>
     <div class="lane-3"></div>
