--- a/bet-the-ponies.html
+++ b/bet-the-ponies.html
@@ -11,20 +11,20 @@
 <main class="track">
     <div class="sky">
         <ul>
-            <li>Lane 1</li>
-            <li>Lane 2</li>
-            <li>Lane 3</li>
-            <li>Lane 4</li>
-            <li>Lane 5</li>
-            <li>Lane 6</li>
+            <li id="lane-1-li">Lane 1</li>
+            <li id="lane-2-li">Lane 2</li>
+            <li id="lane-3-li">Lane 3</li>
+            <li id="lane-4-li">Lane 4</li>
+            <li id="lane-5-li">Lane 5</li>
+            <li id="lane-6-li">Lane 6</li>
         </ul>
         <ul>
-            <li>Horse 1</li>
-            <li>Horse 2</li>
-            <li>Horse 3</li>
-            <li>Horse 4</li>
-            <li>Horse 5</li>
-            <li>Horse 6</li>
+            <li id="horse-1-li">Horse 1</li>
+            <li id="horse-2-li">Horse 2</li>
+            <li id="horse-3-li">Horse 3</li>
+            <li id="horse-4-li">Horse 4</li>
+            <li id="horse-5-li">Horse 5</li>
+            <li id="horse-6-li">Horse 6</li>
         </ul>
         <ul>
             <li>Odds 1</li>
