variables set globally

--- a/bet-the-ponies.html
+++ b/bet-the-ponies.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Bet the Ponies Game</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
     <link rel="stylesheet" href="bet-the-ponies.css">
 </head>
 <body>
@@ -44,18 +43,16 @@
             <li><input type="text"></li>
         </ul>
     </div>
-    <div class="lane-1"><div class="test-horse" id="horse-one-box"><i class="fas fa-horse"></i></div></div>
-    <div class="lane-2"><div class="test-horse" id="horse-two-box"></div><i class="fas fa-horse"></i></div>
-    <div class="lane-3"><div class="test-horse" id="horse-three-box"></div><i class="fas fa-horse"></i></div>
-    <div class="lane-4"><div class="test-horse" id="horse-four-box"></div><i class="fas fa-horse"></i></div>
-    <div class="lane-5"><div class="test-horse" id="horse-five-box"></div><i class="fas fa-horse"></i></div>
-    <div class="lane-6"><div class="test-horse" id="horse-six-box"></div><i class="fas fa-horse"></i></div>
+    <div class="lane-1"><div class="test-horse" id="horse-one-box"></div></div>
+    <div class="lane-2"><div class="test-horse" id="horse-two-box"></div></div>
+    <div class="lane-3"><div class="test-horse" id="horse-three-box"></div></div>
+    <div class="lane-4"><div class="test-horse" id="horse-four-box"></div></div>
+    <div class="lane-5"><div class="test-horse" id="horse-five-box"></div></div>
+    <div class="lane-6"><div class="test-horse" id="horse-six-box"></div></div>
 </main>
 <footer></footer>
 
-<script src="https://code.jquery.com/jquery-2.2.4.js"
-        integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
-        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 <script src="bet-the-ponies.js"></script>
 </body>
 </html>
