winners put in an ordered list

--- a/bet-the-ponies.html
+++ b/bet-the-ponies.html
@@ -11,36 +11,36 @@
 <main class="track">
     <div class="sky">
         <ul>
-            <li id="lane-1-li">Lane 1</li>
-            <li id="lane-2-li">Lane 2</li>
-            <li id="lane-3-li">Lane 3</li>
-            <li id="lane-4-li">Lane 4</li>
-            <li id="lane-5-li">Lane 5</li>
-            <li id="lane-6-li">Lane 6</li>
+            <li class="top-table" id="lane-1-li">Lane 1</li>
+            <li class="top-table" id="lane-2-li">Lane 2</li>
+            <li class="top-table" id="lane-3-li">Lane 3</li>
+            <li class="top-table" id="lane-4-li">Lane 4</li>
+            <li class="top-table" id="lane-5-li">Lane 5</li>
+            <li class="top-table" id="lane-6-li">Lane 6</li>
         </ul>
         <ul>
-            <li id="horse-1-li">Horse 1</li>
-            <li id="horse-2-li">Horse 2</li>
-            <li id="horse-3-li">Horse 3</li>
-            <li id="horse-4-li">Horse 4</li>
-            <li id="horse-5-li">Horse 5</li>
-            <li id="horse-6-li">Horse 6</li>
+            <li class="top-table" id="horse-1-li">Horse 1</li>
+            <li class="top-table" id="horse-2-li">Horse 2</li>
+            <li class="top-table" id="horse-3-li">Horse 3</li>
+            <li class="top-table" id="horse-4-li">Horse 4</li>
+            <li class="top-table" id="horse-5-li">Horse 5</li>
+            <li class="top-table" id="horse-6-li">Horse 6</li>
         </ul>
         <ul>
-            <li>Odds 1</li>
-            <li>Odds 2</li>
-            <li>Odds 3</li>
-            <li>Odds 4</li>
-            <li>Odds 5</li>
-            <li>Odds 6</li>
+            <li class="top-table">Odds 1</li>
+            <li class="top-table">Odds 2</li>
+            <li class="top-table">Odds 3</li>
+            <li class="top-table">Odds 4</li>
+            <li class="top-table">Odds 5</li>
+            <li class="top-table">Odds 6</li>
         </ul>
         <ul>
-            <li><input type="text"></li>
-            <li><input type="text"></li>
-            <li><input type="text"></li>
-            <li><input type="text"></li>
-            <li><input type="text"></li>
-            <li><input type="text"></li>
+            <li class="top-table"><input type="text"></li>
+            <li class="top-table"><input type="text"></li>
+            <li class="top-table"><input type="text"></li>
+            <li class="top-table"><input type="text"></li>
+            <li class="top-table"><input type="text"></li>
+            <li class="top-table"><input type="text"></li>
         </ul>
     </div>
     <div class="lane-1"><div class="test-horse" id="horse-one-box"></div></div>
@@ -50,7 +50,10 @@
     <div class="lane-5"><div class="test-horse" id="horse-five-box"></div></div>
     <div class="lane-6"><div class="test-horse" id="horse-six-box"></div></div>
 </main>
-<footer></footer>
+<footer>
+    <ol></ol>
+    <div id="money"></div>
+</footer>
 
 <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 <script src="bet-the-ponies.js"></script>
