player has a permanent 100 dollar bet on david bowie.

--- a/bet-the-ponies.html
+++ b/bet-the-ponies.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<header class="top-bit"><button class="start" id="start">Start</button></header>
+<header class="top-bit"></header>
 <main class="track">
     <div class="sky">
         <ul>
@@ -34,14 +34,6 @@
             <li class="top-table">Odds 5</li>
             <li class="top-table">Odds 6</li>
         </ul>
-        <ul>
-            <li class="top-table"><input type="text"></li>
-            <li class="top-table"><input type="text"></li>
-            <li class="top-table"><input type="text"></li>
-            <li class="top-table"><input type="text"></li>
-            <li class="top-table"><input type="text"></li>
-            <li class="top-table"><input type="text"></li>
-        </ul>
     </div>
     <div class="lane-1"><div class="test-horse" id="horse-one-box"></div></div>
     <div class="lane-2"><div class="test-horse" id="horse-two-box"></div></div>
@@ -53,6 +45,16 @@
 <footer>
     <ol></ol>
     <div id="money"></div>
+    <div id="betting-box">
+        <input type="text" id="bet-amount">
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button class="start" id="start">Start</button>
+    </div>
 </footer>
 
 <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
