player can now select which horse to bet on

--- a/bet-the-ponies.html
+++ b/bet-the-ponies.html
@@ -47,12 +47,12 @@
     <div id="money"></div>
     <div id="betting-box">
         <input type="text" id="bet-amount">
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
+        <button class="betting-button" id="bet-btn-1"></button>
+        <button class="betting-button" id="bet-btn-2"></button>
+        <button class="betting-button" id="bet-btn-3"></button>
+        <button class="betting-button" id="bet-btn-4"></button>
+        <button class="betting-button" id="bet-btn-5"></button>
+        <button class="betting-button" id="bet-btn-6"></button>
         <button class="start" id="start">Start</button>
     </div>
 </footer>
